fixing font weight on mobile

--- a/src/stylesheets/main.css
+++ b/src/stylesheets/main.css
@@ -574,4 +574,9 @@ p.footerContact {
     font-size: 2.5rem;
     padding: 10px 50px 0 40px;
   }
+
+  /* line 70, partials/_media.sass */
+  .resourcesText {
+    font-weight: normal;
+  }
 }
