--- a/src/stylesheets/partials/_media.sass
+++ b/src/stylesheets/partials/_media.sass
@@ -67,3 +67,5 @@
     p
       @include font-size(40px)
       padding: 10px 50px 0 40px
+  .resourcesText
+    font-weight: normal
